arreglo en la grilla desplazamiento de columnas, arreglado el centrado de fotos equipo y redes sociales

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 			</div>
 			<!-- CAMILA -->
 			<div class="row foto">
-				<div class="col-6">
-					<div class="camila"></div>
+				<div class="col-6 centrar-fot">
+					<img src="img/fotos/equipo2.jpg" class="foto-circular">
 					<h1>Camila Basurco</h1>
 					<h4>Cargo desempeñado</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex soluta sit, nihil laborum eius, provident voluptatibus a reiciendis sed, deserunt totam libero! Sint reprehenderit numquam asperiores quam voluptas. Molestiae, ut.</p>
@@ -174,9 +174,9 @@
 					<a href="#"><img src="img/iconos/redes-sociales/mensaje.png" alt="mensaje" class="redes"></a>
 				</div>
 			<!-- GABRIELA -->
-				<div class="col-6">
-					<div class="gabriela"></div>
-					<h1>Camila Basurco</h1>
+				<div class="col-6 centrar-fot">
+					<img src="img/fotos/equipo3.jpg" class="foto-circular">
+					<h1>Gabriela Bertocci</h1>
 					<h4>Cargo desempeñado</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex soluta sit, nihil laborum eius, provident voluptatibus a reiciendis sed, deserunt totam libero! Sint reprehenderit numquam asperiores quam voluptas. Molestiae, ut.</p>
 					<a href="#"><img src="img/iconos/redes-sociales/twitter.png" alt="twitter" class="redes"></a>
@@ -233,7 +233,7 @@
 <!-- SECCION REDES SOCIALES -->
 	<section class="box-cinco">
 		<div class="container">
-			<div class="row rrss">
+			<div class="row rrss ">
 				<div class="col-3 fb">
 					<a name="siguenos">
 					<a href="#">
